--- a/Restaurant/Restaurant/Views/Shared/_Layout.cshtml
+++ b/Restaurant/Restaurant/Views/Shared/_Layout.cshtml
@@ -17,21 +17,32 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("RESTAURANTE", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Promociones", "Index", "Promociones")</li>                  
+                    <li>@Html.ActionLink("Promociones", "Index", "Promociones")</li>        
+                    <li>@Html.ActionLink("Insertar Producto", "SP_Insertar_Producto", "SP_Insertar")</li>
+                    <li>@Html.ActionLink("Ventas Por Rango", "SP_Ventas_Rango", "SP_Ventas")</li>
+                    <li>@Html.ActionLink("Alta De Pedidos", "SP_Alta_Pedido", "SP_Nuevo_Pedido")</li>
+                    <li>@Html.ActionLink("Orden Por Estado", "SP_Orden_Estado", "SP_OrdenxEstado")</li>
+                    <li>@Html.ActionLink("Cancelar Pedido", "SP_Cancelar_Pedido", "SP_Cancelar_Pedido")</li>
+                    <li>@Html.ActionLink("Modificar Ingrediente", "SP_Modificar_Ingrediente", "SP_Modificar")</li>
                 </ul>
             </div>
         </div>
     </div>
+
+  
+
+
+
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Restaurante BD Proyecto</p>
         </footer>
     </div>
 
